# backfup

./: README.md  cli.py  docker-compose.yml  pyproject.toml  seed.sql
commands/: add.py  backup.py  backup_list.py  init.py  list.py  restore.py  schedule.py  storage_list.py  studio.py  test.py
config/: store.py
utils/: credentials.py  prompts.py
