[project]
name = "backfup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.65",
    "fastapi>=0.135.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "typer>=0.24.1",
    "uvicorn>=0.41.0",
]
